--- a/estilos.scss
+++ b/estilos.scss
@@ -340,6 +340,10 @@ html{
         padding: 64px;
     }
 
+    .moduloTitle .row {
+        padding-top: 64px;
+    }
+
 
     .carrousel div {
         display: flex;
